--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ permissions:
 jobs:
   regression:
     name: "Regression"
-    runs-on: [linux-latest]
+    runs-on: [ubuntu-24.04]
     timeout-minutes: 320
     steps:
 
