--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
     name: "Regression"
     runs-on: [ubuntu-24.04]
     timeout-minutes: 320
+    permissions:
+      issues: write
     steps:
 
 
